--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prepare": "husky install",
-    "lint:format": "npx --no-install lint-staged && npx --no-install pretty-quick --staged"
+    "lint:format": "npx --no-install lint-staged && npx --no-install pretty-quick --staged",
+    "client:deploy": "sls client deploy --no-config-change --no-policy-change --no-cors-change --no-confirm",
+    "client:build:deploy": "npm run build && npm run client:deploy",
+    "cloudfront:setup": "sls deploy",
+    "cloudfront:domainInfo": "sls domainInfo",
+    "cloudfront:invalidateCache": "sls invalidateCloudFrontCache",
+    "cloudfront:build:deploy": "npm run client:build:deploy && npm run cloudfront:invalidateCache",
+    "cloudfront:update:build:deploy": "npm run cloudfront:setup && npm run cloudfront:build:deploy",
+    "shutdown": "sls remove"
   },
   "private": true,
   "dependencies": {
@@ -61,6 +69,9 @@
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
     "protractor": "~7.0.0",
+    "serverless": "^2.72.3",
+    "serverless-finch": "^2.8.0",
+    "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
